--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,10 @@
 {% load static %}
 {% block content %}
 
+<!-- Hero section with JS Animations -->
 <section>
   <div class="hero">
-
     <img src="{% static '/images/welcome-hero2.jpg' %}" id="food-img" alt="Welcome hero picture">
-
     <div class="headline">
       <h1>Cooking Time Is <br> My Favorite Time <i class="far fa-heart"></i></h1>
       <a class="navbar-brand" href="{% url 'home' %}">
@@ -15,72 +14,94 @@
           alt="Shemmylicious Food Sign" height="90">
       </a>
     </div>
-
     <div class="headline-bttn-container">
       {% if user.is_authenticated %}
-
-      <a href="#" class="btn btn-sm btn-outline-light headline-bttn">Browse Recipes</a>
-
+      <a href="{% url 'home' %}" class="btn btn-sm btn-outline-light headline-bttn">Browse Recipes <i
+          class="fa-solid fa-bowl-rice fa-beat-fade"></i></a>
+      <a href="{% url 'recipe-mylist' %}" class="btn btn-sm btn-outline-light headline-bttn">Your Recipes <i
+          class="fa-solid fa-user fa-xs"></i></a>
       {% else %}
-
-      <a href="{% url 'account_signup' %}" class="btn btn-sm btn-outline-light headline-bttn">Register   <i class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
-      <a href="{% url 'account_login' %}" class="btn btn-sm btn-outline-light headline-bttn" >Login   <i class="fa-solid fa-arrow-right-to-bracket fa-beat-fade fa-xs"></i></a> 
-
+      <a href="{% url 'account_signup' %}" class="btn btn-sm btn-outline-light headline-bttn">Register <i
+          class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
+      <a href="{% url 'account_login' %}" class="btn btn-sm btn-outline-light headline-bttn">Login <i
+          class="fa-solid fa-arrow-right-to-bracket fa-beat-fade fa-xs"></i></a>
       {% endif %}
-
     </div>
-
   </div>
 </section>
+
+<!-- Slider used for JS Animations -->
 <div class="index-slider"></div>
 
+
+
+
+
+
+
+
+
 <div class="container container-carosel container-fluid">
-
-  <div class="inner-text col-12 col-md-3 offset-7">
-    <h1>About Autor</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sequi alias numquam eos, tenetur perspiciatis harum eum nihil provident recusandae cum animi fugit veritatis nobis illo atque quam repellendus quo.
-    </p>
-    
-  </div>
+  <div class="row">
   
-
-  <div id="carouselExampleInterval" class="carousel slide col-12 col-md-6 offset-md-1 col-10" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">        
-        <img src="{% static '/images/welcome-hero.jpg' %}" class="d-block w-100" alt="carousel random image">     
-      </div>
-      {% for slide in slider %}
-            <!-- Slides -->
-            <div class="carousel-item" data-bs-interval="5000">
-              <a href="{% url 'recipe_detail' slide.slug %}">
-                {% if "recipe" in slide.featured_image.url %}
-                <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png"
-                  class="d-block w-100" alt="slider random image">
-                {% else %}
-                <img src="{{ slide.featured_image.url }}" class="d-block w-100" alt="slider random image">
-                {% endif %}
-                <div class="carousel-image-flash">
-                  <p class="carousel-image-flash-author">Author: {{ slide.author }}</p>
-                  <p class="carousel-image-flash-category">{{ slide.category }}</p>
-                </div>
-                <div class="carousel-image-comment">
-                  <h4 class="carousel-image-comment-title">{{ slide.recipe_title }}</h4>
-                  <p class="carousel-image-comment-comment">{{ slide.featured_comment }}</p>
-                </div>
-              </a>
+    <div id="carouselExampleInterval" class="carousel slide col-12 col-md-6 offset-md-1 col-10" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="{% static '/images/welcome-hero.jpg' %}" class="d-block w-100" alt="carousel random image">
+        </div>
+        {% for slide in slider %}
+        <!-- Slides -->
+        <div class="carousel-item" data-bs-interval="5000">
+          <a href="{% url 'recipe_detail' slide.slug %}">
+            {% if "recipe" in slide.featured_image.url %}
+            <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png"
+              class="d-block w-100" alt="slider random image">
+            {% else %}
+            <img src="{{ slide.featured_image.url }}" class="d-block w-100" alt="slider random image">
+            {% endif %}
+            <div class="carousel-image-flash">
+              <p class="carousel-image-flash-author">Author: {{ slide.author }}</p>
+              <p class="carousel-image-flash-category">{{ slide.category }}</p>
             </div>
-      {% endfor %}
+            <div class="carousel-image-comment">
+              <h4 class="carousel-image-comment-title">{{ slide.recipe_title }}</h4>
+              <p class="carousel-image-comment-comment">{{ slide.featured_comment }}</p>
+            </div>
+          </a>
+        </div>
+        {% endfor %}
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+
+    <div class="inner-text col-12 col-md-8 offset-md-6">
+      <div class="row">
+
+        <div class="col-12 col-md-5 offset-md-2">
+          <h1>About Autor</h1>
+        </div>
+
+        <div class="w-100"></div>
+
+        <div class="col-12 col-md-5 offset-md-2">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sequi alias numquam eos, tenetur perspiciatis
+            harum eum nihil provident recusandae cum animi fugit veritatis nobis illo atque quam repellendus quo.
+          </p>
+        </div>
+
+      </div>
+
+    </div>  
   </div>
-  
 </div>
 
 
