added blank 100vh section to index and uploaded chef image to about section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,6 +206,14 @@ section {
 }
 
 /*---------------------------------------
+             About  
+---------------------------------------*/
+#hero-about-chef-img {
+    height: 250px;
+    border-radius: 50%;
+}
+
+/*---------------------------------------
              Carousel  
 ---------------------------------------*/
 .container-carosel {
