styled about section in index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
       <!-- Logo -->
       <a class="navbar-brand" href="{% url 'home' %}">
         <span class="brand-logo">Shemmylicious</span>
-        <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679654869/media/Shemmylicious/food_sjzw1x.png"
+        <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1680764676/media/Shemmylicious/food_axbqqz.png"
           alt="Shemmylicious Food Sign" height="70">
       </a>
       <!-- Hidden Burger Menu -->
@@ -186,7 +186,7 @@
     </div>
   </div>
 
-  <main class="flex-shrink-0 main-bg">   
+  <main class="flex-shrink-0 main-bg scrollable">   
     {% block content %}
     <!--  Block Recipe Column -->
     {% endblock content %}
