--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,6 +47,20 @@ a {
     background-color: #fff ;
 }
 
+.scrollable {
+    scroll-behavior: smooth;
+}
+
+.border {
+    border: solid 1px #45575A;
+    border-radius: 8px;
+}
+
+/*--------------------------------------- 
+-----------------------------------------
+            NAVBAR 
+-----------------------------------------
+---------------------------------------*/
 .navbar-nav .nav-link.active, 
 .navbar-nav .show>.nav-link,
 .dropdown-toggle,
@@ -107,8 +121,6 @@ a {
     background-color: #fff;
 }
 
-
-
 /*--------------------------------------- 
 -----------------------------------------
             INDEX 
@@ -145,7 +157,6 @@ section {
 
 .hero::before {
     content: "";
-    background: #45575A;
     opacity: 0.1;
     width: 100%;
     height: 100%;
@@ -211,6 +222,17 @@ section {
 #hero-about-chef-img {
     height: 250px;
     border-radius: 50%;
+}
+
+.hero-about-chef-title{
+    font-size: 130%;
+    color: #45575A;
+    margin-top: 20px;
+}
+
+.hero-about-chef-p {
+    font-size: 100%;
+    color: #45575A;
 }
 
 /*---------------------------------------
