--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <div></div>
 </section>
 <!-- Hero section with JS Animations -->
-<section id="section-hero">
+<section class="sections-index"  id="section-hero">
   <div class="container hero">
     <img src="{% static '/images/welcome-hero2.jpg' %}" id="food-img" alt="Welcome hero picture">
     <div class="headline">
@@ -34,23 +34,28 @@
   </div>
 
 </section>
-  <!-- Slider used for JS Animations -->
-  <div class="index-slider"></div>
+<!-- Slider used for JS Animations -->
+<div class="index-slider"></div>
 <!-- Carosel and about Author-->
-<section id="section-about">
+<section class="sections-index" id="section-about">
   <div class="container container-carosel container-fluid">
     <div class="row">
       <!-- About Author -->
       <div class="inner-text col-12 col-md-4 offset-md-7">
         <div class="row">
           <div class="">
-            <img src="{% static '/images/welcome-hero-author-head.jpg' %}" alt="round picture of a Chef" id="hero-about-chef-img">
-            <h1 class="hero-about-chef-title">Hi, My name is Shemmy!</h1>
+            <img src="{% static '/images/welcome-hero-author-head.jpg' %}" alt="round picture of a Chef"
+              id="hero-about-chef-img">
+            <h1 class="hero-about-chef-title">Hi, my name is Shemmy!</h1>
           </div>
           <div class="w-100"></div>
           <div class="hero-about-chef-p">
-            <p>Shemmylicious food is my little corner of the Internet where I share my passion for delicious food with you!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptas in natus esse sequi suscipit dolorum at, corrupti dignissimos quae quo cum explicabo ducimus repellat nostrum. Optio nobis expedita eum.</p>
+            <p>Shemmylicious food is my little corner of the Internet where I share my passion for delicious food with
+              you!</p>
+            <p>I like to create and share recipes that feature delicious, real food made for everyday! <br> My recipes are
+              fresh, seasonal, mostly simple, often healthy, and sometimes peppered with a little cheese and butter
+              mixed in.</p>
+              <p>Feel free to create an account, comment and like mine and share your own resipes.</p>
           </div>
         </div>
       </div>
