--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -3,12 +3,72 @@
 
 {% block content %}
 
-<br>
+<!-- Top Slogan Section -->
+<section class="top-slogan">
+  <div class="container-fluid text-center">
+      <h4 class="top-slogan">Cooking Time Is My Favorite Time <i class="far fa-heart"></i>
+  </div>
+  <hr>
+</section>
+
+<!-- Categories Secion -->
+<section section-categories>
+
+  <div class="container text-start">
+    <div class="row">
+      <div class="col-2 -2 offset-md-2 border">
+        Column1
+      </div>
+      <div class="col-2 border">
+        Column2
+      </div>
+      <div class="col-2 border">
+        Column3
+      </div>
+      <div class="col-2 border">
+        Column4
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1 offset-md-1 border">
+        Column1
+      </div>
+      <div class="col-1 border">
+        Column2
+      </div>
+      <div class="col-1 border">
+        Column3
+      </div>
+      <div class="col-1 border">
+        Column4
+      </div>
+      <div class="col-1 border">
+        Column1
+      </div>
+      <div class="col-1 border">
+        Column2
+      </div>
+      <div class="col-1 border">
+        Column3
+      </div>
+      <div class="col-1 border">
+        Column4
+      </div>
+      <div class="col-1 border">
+        Column4
+      </div>
+      <div class="col-1 border">
+        Column4
+      </div>
+    </div>
+  </div>
+
+</section>
+
+
+<!-- Blog -->
 <div class="container col-lg-8 offset-lg-2 col-10">
-  <h4>Categories</h4>
-  <br>
-
-
   <hr>
   <br>
   <h4>Recipes</h4>
