--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,12 +59,6 @@ a {
     color: #0E9A45;
 }
 
-.top-slogan {
-    font-size: 120%;
-    font-family: 'Sen', sans-serif;
-    text-transform: uppercase;
-}
-
 /*--------------------------------------- 
 -----------------------------------------
             NAVBAR 
@@ -135,6 +129,23 @@ a {
             INDEX 
 -----------------------------------------
 ---------------------------------------*/
+.top-slogan h4 {
+    font-size: 120%;
+    font-family: 'Sen', sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.top-slogan h5 {
+    font-family: 'Sen', sans-serif;
+    font-weight: bold;
+}
+
+.top-slogan p {
+    font-size: 80%;
+    font-weight: 100;
+}
+
 /*---------------------------------------
              HERO 
 ---------------------------------------*/
@@ -525,7 +536,7 @@ img {
     .inner-text {
         position: unset;
         display: inline;
-        padding-top: 100px;
+        margin-top: 450px;
     }
 
     .headline {
