resolved an issie with TypeError

--- a/templates/category_list.html
+++ b/templates/category_list.html
@@ -3,39 +3,49 @@
 
 {% block content %}
 
-    <h1>category list</h1>
+<!-- Top Slogan Section -->
+<section class="top-slogan">
+    <div class="container col-lg-8 offset-lg-2 col-10 text-center top-slogan">
+        <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4>
+        <hr>
+        <h5>Shemmylicious Food by Category</h5>
+        <p>Here's where you can find all the latest and Shemmylicious food recipes categorised and grouped. <br>
+            Be sure to sign up to be able to comment and like my posts as well as create your own recipes.</p>
+        <hr>
+        <br>
+    </div>
+</section>
 
-    <!-- Categories Large Section -->
-    <section section-categories>
+<!-- Categories Large Section -->
+<section class="section-categories">
 
-        <div class="container-fluid">
-            <div class="row">
+    <div class="container col-12 col-md-10 offset-md-1 text-center">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
 
-                <div class="col-12 col-md-10 offset-md-1 border">
-                    <div class="row">
+            {% for category in object_list %}
+            {% if forloop.counter <= 5 %}
+            <div class=" card col-6 col-md-2 h-100">
 
-                        {% for category in object_list %}
-                            {% if forloop.counter <= 5 %}
-                                <div class="col-6 col-md-2 border">
-
-                                    <img src="{{ category.featured_image.url }}" alt="Category Image"> <br>
-                                    <a href="{% url 'category' category %}"><h1>{{ category.category_name }}</h1></a> <br>
-
-                                </div>
-                            {% elif forloop.counter == 6 %}
-                                <div class="w-100"></div>
-
-                            {% elif forloop.counter >= 6 %}
-                                <div class="col-1 border">
-                                    Sec.{{ category }}
-                                </div>
-                            {% endif %}
-
-                        {% endfor %}
-                    </div>
+                <img src="{{ category.featured_image.url }}" alt="Category Image" class="card-img-top category-img">
+                <div class="card-body">
+                    <a href="{% url 'category' category %}" class="btn btn-sm btn-outline-light">
+                        <h3 class="card-title">{{ category.category_name }}</h1>
+                    </a> <br>
                 </div>
             </div>
+            {% elif forloop.counter == 6 %}
+            <div class="w-100"></div>
 
-    </section>
+            {% elif forloop.counter >= 6 %}
+            <div class="col-1 border">
+                Sec.{{ category }}
+            </div>
+            {% endif %}
 
-    {% endblock %}
+            {% endfor %}
+        </div>
+
+
+</section>
+
+{% endblock %}
