--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -6,17 +6,17 @@
 <!-- Top Slogan Section -->
 <section class="top-slogan">
   <div class="container col-lg-8 offset-lg-2 col-10 text-center top-slogan">
-    <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i>
+    <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4> 
       <hr>
-      <h5>Shemmylicious Food Blog</h5>
-      <p>Here's where you can find all the latest and Shemmylicious food recipes from my blog. <br>
+      <h5>Shemmylicious Food by Category</h5>
+      <p>Here's where you can find all the latest and Shemmylicious food recipes categorised and grouped. <br>
         Be sure to sign up to be able to comment and like my posts as well as create your own recipes.</p>
       <hr>
       <br>
   </div>
 </section>
 
-
+<h1>Recipe List TBD</h1>
 
 <!-- Blog -->
 <div class="container col-lg-8 offset-lg-2 col-10">
