--- a/templates/category_list.html
+++ b/templates/category_list.html
@@ -18,29 +18,25 @@
 
 <!-- Categories Large Section -->
 <section class="section-categories">
-
-    <div class="container col-12 col-md-10 offset-md-1 text-center">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-
+    <div class="container col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 text-center">
+        <div class="row row-cols-1 row-cols-md-3 g-1">
             {% for category in object_list %}
-            {% if forloop.counter <= 5 %}
-            <div class=" card col-6 col-md-2 h-100">
-
-                <img src="{{ category.featured_image.url }}" alt="Category Image" class="card-img-top category-img">
-                <div class="card-body">
-                    <a href="{% url 'category' category %}" class="btn btn-sm btn-outline-light">
-                        <h3 class="card-title">{{ category.category_name }}</h1>
-                    </a> <br>
+                {% if forloop.counter <= 4 %}
+                <div class=" card col-6 col-md-2 h-100">
+                    <img src="{{ category.featured_image.url }}" alt="Category Image" class="card-img-top cat-card-img w-100">
+                    <div class="card-body cat-card-body">
+                        <a href="{% url 'category' category %}" class="btn btn-sm w-100">
+                            <h5 class="card-title cat-card-title border text-center">{{ category.category_name }}</h5>
+                        </a> <br>
+                    </div>
                 </div>
-            </div>
-            {% elif forloop.counter == 6 %}
-            <div class="w-100"></div>
-
-            {% elif forloop.counter >= 6 %}
-            <div class="col-1 border">
-                Sec.{{ category }}
-            </div>
-            {% endif %}
+                {% elif forloop.counter == 5 %}
+                <div class="w-100"></div><br>
+                {% elif forloop.counter >= 5 %}
+                <div class="col-1 border">
+                    Sec.{{ category }}
+                </div>
+                {% endif %}
 
             {% endfor %}
         </div>
