--- a/templates/recipe_list.html
+++ b/templates/recipe_list.html
@@ -42,13 +42,13 @@
       <div class="col-lg-8 col-12">
         <div class="card-body">
           <a href="{% url 'recipe_detail' recipe.slug %}">
-            <h1 class="card-title">"{{ recipe.recipe_title }}"</h1>
+            <h1 class="card-title card-blog-title">"{{ recipe.recipe_title }}"</h1>
           </a>
           <hr>
           <p class="card-text">{{ recipe.excerpt }}</p>
           <hr>
           <p class="card-featured-comment">Featured Comment</p>
-          <h3 class="card-title">{{ recipe.featured_comment }}</h5>
+          <h3 class="card-title card-blog-title">{{ recipe.featured_comment }}</h5>
             <a href="{% url 'recipe_detail' recipe.slug %}">
               <p class="card-featured-comment-continue">Continue reading...</p>
             </a>
