--- a/templates/category_list.html
+++ b/templates/category_list.html
@@ -19,7 +19,7 @@
 <!-- Categories Large Section -->
 <section class="section-categories">
     <div class="container col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 text-center">
-        <div class="row row-cols-1 row-cols-md-3 g-1">
+        <div class="row row-cols-1 row-md-3 g-1">
             {% for category in object_list %}
                 {% if forloop.counter <= 4 %}
                 <div class=" card col-6 col-md-2 h-100">
@@ -31,10 +31,15 @@
                     </div>
                 </div>
                 {% elif forloop.counter == 5 %}
-                <div class="w-100"></div><br>
+                <div class="w-100"></div><br><br><hr><br><br>
                 {% elif forloop.counter >= 5 %}
-                <div class="col-1 border">
-                    Sec.{{ category }}
+                <div class="card col-3 col-md-1 offset-md-2 col-lg-2 offset-lg-3">
+                    <img src="{{ category.featured_image.url }}" alt="Category Round Image" class="card-img-bttm cat-card-img-bttm">
+                    <div class="card-body cat-card-body-bttm">
+                        <a href="{% url 'category' category %}" class="btn btn-sm w-100">
+                            <h5 class="card-title cat-card-title-bttm border text-center">{{ category.category_name }}</h5>
+                        </a> <br>
+                    </div>
                 </div>
                 {% endif %}
 
