--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand" href="{% url 'home' %}">
+      <a class="navbar-brand" href="{% url 'start' %}">
         <span class="brand-logo">Shemmylicious</span>
         <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1680764676/media/Shemmylicious/food_axbqqz.png"
           alt="Shemmylicious Food Sign" height="70">
