Updated all pages descriptions

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,19 +63,19 @@
 
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
-              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-            </div>
-          </li>
-
-          <li class="nav-item nav-link-s">
-            <div class="nav-item-s">
-              <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'recipes' %}">Recipes</a>
             </div>
           </li>
 
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
               <a class="nav-link active" aria-current="page" href="{% url 'categories' %}">Categories</a>
+            </div>
+          </li>
+
+          <li class="nav-item nav-link-s">
+            <div class="nav-item-s">
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Blog</a>
             </div>
           </li>
         
