--- a/templates/recipe_all.html
+++ b/templates/recipe_all.html
@@ -8,17 +8,17 @@
   <div class="container col-lg-8 offset-lg-2 col-10 text-center top-slogan">
     <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4> 
       <hr>
-      <h5>Shemmylicious Food Blog</h5>
-      <p>Here's where you can find all the latest and Shemmylicious food recipes comments and likes. <br>
+      <h5>Shemmylicious Food</h5>
+      <p>Here's where you can find all the latest and Shemmylicious food recipes. <br>
         Be sure to sign up to be able to comment and like my posts as well as create your own recipes.</p>
       <hr>
       <br>
   </div>
 </section>
 
-<h1>Recipe List TBD</h1>
+  <h1>Recipes Page</h1>
 
-<!-- Blog -->
+  <!-- List of all Recipes -->
 <div class="container col-lg-8 offset-lg-2 col-10">
 
   {% for recipe in object_list %}
@@ -72,6 +72,10 @@
   </div>
   <hr>
 </div>
+
+
+
+
 {% if is_paginated %}
 <nav aria-label="Page naigation">
   <ul class="pagination justify-content-center">
@@ -91,3 +95,4 @@
 {% endif %}
 </div>
 {% endblock %}
+
