--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
 
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
-              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Blog</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'blog' %}">Blog</a>
             </div>
           </li>
         
