--- a/templates/DEL_add_recipe.html
+++ b/templates/DEL_add_recipe.html
@@ -24,7 +24,7 @@
                     {{ form.as_p }}
 
                     <input type="submit" value="Add Recipe" class="btn btn-outline-warning">
-                    <a href="{% url 'home' %}" class="btn btn-outline-success">Home</a>
+                    <a href="{% url 'recipes' %}" class="btn btn-outline-success">Home</a>
                 </form>
                 <br>
                 
