--- a/templates/recipe_all.html
+++ b/templates/recipe_all.html
@@ -6,76 +6,48 @@
 <!-- Top Slogan Section -->
 <section class="top-slogan">
   <div class="container col-lg-8 offset-lg-2 col-10 text-center top-slogan">
-    <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4> 
-      <hr>
-      <h5>Shemmylicious Food</h5>
-      <p>Here's where you can find all the latest and Shemmylicious food recipes. <br>
-        Be sure to sign up to be able to comment and like my posts as well as create your own recipes.</p>
-      <hr>
-      <br>
+    <h4 class="">Cooking Time Is My Favorite Time <i class="far fa-heart"></i></h4>
+    <hr>
+    <h5>Shemmylicious Food</h5>
+    <p>Here's where you can find all the latest and Shemmylicious food recipes. <br>
+      Be sure to sign up to be able to comment and like my posts as well as create your own recipes.</p>
+    <hr>
+    <br>
   </div>
 </section>
-
-  <h1>Recipes Page</h1>
-
-  <!-- List of all Recipes -->
-<div class="container col-lg-8 offset-lg-2 col-10">
-
-  {% for recipe in object_list %}
-
-  <div class="card mb-3">
-    <div class="row gy-1">
-      <div class="col-lg-4 col-12">
-        <div class="image-container">
-          {% if "recipe" in recipe.featured_image.url %}
-          <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png"
-            alt="deafult image" class="img-thumbnail card-img-top ">
-          {% else %}
-          <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-top">
-          {% endif %}
-          <div class="image-flash">
-            <p class="author image-flash-author">Author: {{ recipe.author }}</p>
-            <p class="category image-flash-category">{{ recipe.category }}</p>
-          </div>
+<!-- List of all Recipes -->
+<div class="container col-lg-8 offset-lg-2 col-10 text-center">
+  <div class="row justify-content-start">
+    {% for recipe in object_list %}
+    <div class="card" style="width: 18rem;">
+      <div class="image-container card-img-top shadow">
+        {% if "recipe" in recipe.featured_image.url %}
+        <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png"
+          alt="deafult image" class="img-thumbnail card-img-recipe w-100">
+        {% else %}
+        <img src="{{ recipe.featured_image.url }}" alt="image" class="img-thumbnail card-img-recipe w-100">
+        {% endif %}
+        <div class="image-flash">
+          <p class="author image-flash-author">Author: {{ recipe.author }}</p>
+          <p class="category image-flash-category">{{ recipe.category }}</p>
         </div>
       </div>
-      <div class="col-lg-8 col-12">
-        <div class="card-body">
-          <a href="{% url 'recipe_detail' recipe.slug %}">
-            <h1 class="card-title card-blog-title">"{{ recipe.recipe_title }}"</h1>
-          </a>
-          <hr>
-          <p class="card-text">{{ recipe.excerpt }}</p>
-          <hr>
-          <p class="card-featured-comment">Featured Comment</p>
-          <h3 class="card-title card-blog-title">{{ recipe.featured_comment }}</h5>
-            <a href="{% url 'recipe_detail' recipe.slug %}">
-              <p class="card-featured-comment-continue">Continue reading...</p>
-            </a>
-            <br>
-            <p class="card"><small class="text-muted">{{ recipe.created_date}}
-                <i class="far fa-heart"> {{ recipe.number_of_likes}}</i></small>
-            </p>
-        </div>
+      <div class="card-body card-body-recipe-list">
+        <a href="{% url 'recipe_detail' recipe.slug %}">
+          <h1 class="card-title card-text card-list-title">"{{ recipe.recipe_title }}"</h1>
+        </a>
+        <br>
+        <p class="card"><small class="text-muted">{{ recipe.created_date}} 
+            <i class="far fa-heart"> {{ recipe.number_of_likes}}</i></small>
+        </p>
+        <hr>
       </div>
     </div>
-    <br>
-
-    {% if forloop.counter|divisibleby:3 %}
-  </div>
-  <div class="row">
-    {% endif %}
-    <br>
-    <br>
-    <br>
     {% endfor %}
   </div>
   <hr>
 </div>
-
-
-
-
+<!-- Pagination by 8 items -->
 {% if is_paginated %}
 <nav aria-label="Page naigation">
   <ul class="pagination justify-content-center">
@@ -95,4 +67,3 @@
 {% endif %}
 </div>
 {% endblock %}
-
