--- a/templates/recipe_search.html
+++ b/templates/recipe_search.html
@@ -24,7 +24,7 @@
 
     
 
-    <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
+    <a href="{% url 'recipes' %}" class="btn btn-sm btn-outline-success">Home</a>
 
 
 </div>
