--- a/templates/recipe_update.html
+++ b/templates/recipe_update.html
@@ -28,7 +28,7 @@
     
         <br>
         <a href="{% url 'recipe-mylist' %}" class="btn btn-sm btn-outline-success">Back</a>
-        <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
+        <a href="{% url 'recipes' %}" class="btn btn-sm btn-outline-success">Home</a>
     <input type="submit" value="Update" class="btn btn-sm btn-outline-success">
 
     </form>
