--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,7 @@
 
     
 
-    <a href="{% url 'home' %}" class="btn btn-sm btn-outline-success">Home</a>
+    <a href="{% url 'recipes' %}" class="btn btn-sm btn-outline-success">Home</a>
 
 
 </div>
